# langflow

./: .gitignore  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
langflow/: app.py  cli.py  endpoints.py  list_endpoints.py  signature.py
langflow/frontend/: package-lock.json  package.json
langflow/frontend/src/controllers/NodesServices/: index.ts
space_flow/src/: App.tsx  utils.ts
space_flow/src/CustomNodes/FlowNode/: index.tsx
space_flow/src/CustomNodes/GenericNode/components/parameterComponent/: index.tsx
space_flow/src/components/HeaderComponent/: index.tsx
space_flow/src/pages/FlowPage/: index.tsx
space_flow/src/pages/FlowPage/components/connection/: index.tsx
space_flow/src/pages/FlowPage/components/extraSidebarComponent/: index.tsx
space_flow/src/pages/FlowPage/flowManager/: index.tsx
space_flow/src/pages/FlowPage/flowManager/tabComponent/: index.tsx
